--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/classes.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.training.sanity.tests.UniformCustomerListUNF_017</td>
+<td>com.training.sanity.tests.UniformFilterOrderUNF_47</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>filterCustomer</td>
+<td>filterOrder</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
