--- a/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium-Automation-Elearning-Framework-TestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a76f76">  <td>19/10/31 13:15:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UniformFilterOrderUNF_47.afterClass()[pri:0, instance:com.training.sanity.tests.UniformFilterOrderUNF_47@12d4bf7e]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@283383329</td>   <td></td> </tr>
-<tr bgcolor="a76f76">  <td>19/10/31 13:15:46</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UniformFilterOrderUNF_47.afterMethod()[pri:0, instance:com.training.sanity.tests.UniformFilterOrderUNF_47@12d4bf7e]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@283383329</td>   <td></td> </tr>
-<tr bgcolor="a76f76">  <td>19/10/31 13:15:42</td>   <td>-4037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UniformFilterOrderUNF_47.filterOrder()[pri:0, instance:com.training.sanity.tests.UniformFilterOrderUNF_47@12d4bf7e]">filterOrder</td> 
-  <td>main@283383329</td>   <td></td> </tr>
-<tr bgcolor="a76f76">  <td>19/10/31 13:15:26</td>   <td>-20115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UniformFilterOrderUNF_47.setUp()[pri:0, instance:com.training.sanity.tests.UniformFilterOrderUNF_47@12d4bf7e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@283383329</td>   <td></td> </tr>
-<tr bgcolor="a76f76">  <td>19/10/31 13:15:26</td>   <td>-20139</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UniformFilterOrderUNF_47.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.UniformFilterOrderUNF_47@12d4bf7e]">&gt;&gt;setUpBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@283383329</td>   <td></td> </tr>
+<tr bgcolor="71d0d8">  <td>19/11/02 00:09:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UniformCreateCategoryAndProductUNF_48.afterClass()[pri:0, instance:com.training.sanity.tests.UniformCreateCategoryAndProductUNF_48@3b07a0d6]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@884452399</td>   <td></td> </tr>
+<tr bgcolor="71d0d8">  <td>19/11/02 00:09:31</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UniformCreateCategoryAndProductUNF_48.afterMethod()[pri:0, instance:com.training.sanity.tests.UniformCreateCategoryAndProductUNF_48@3b07a0d6]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@884452399</td>   <td></td> </tr>
+<tr bgcolor="71d0d8">  <td>19/11/02 00:09:23</td>   <td>-7495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UniformCreateCategoryAndProductUNF_48.createCategoryAndProduct()[pri:0, instance:com.training.sanity.tests.UniformCreateCategoryAndProductUNF_48@3b07a0d6]">createCategoryAndProduct</td> 
+  <td>main@884452399</td>   <td></td> </tr>
+<tr bgcolor="71d0d8">  <td>19/11/02 00:09:08</td>   <td>-22632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UniformCreateCategoryAndProductUNF_48.setUp()[pri:0, instance:com.training.sanity.tests.UniformCreateCategoryAndProductUNF_48@3b07a0d6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@884452399</td>   <td></td> </tr>
+<tr bgcolor="71d0d8">  <td>19/11/02 00:09:08</td>   <td>-22663</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UniformCreateCategoryAndProductUNF_48.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.UniformCreateCategoryAndProductUNF_48@3b07a0d6]">&gt;&gt;setUpBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@884452399</td>   <td></td> </tr>
 </table>
